some slight alterations

--- a/Pages/about-me.html
+++ b/Pages/about-me.html
@@ -35,7 +35,7 @@
                     <a class="peach" href="portfolio.html">Graphic Design</a>
                 </div>
                 <div id="orange">
-                    <a class="peach" href="portfolio-3D.html">3D Modeling</a>
+                    <a class="peach">3D Modeling</a>
                 </div>
                 <div id="watermelon">
                     <a class="peach" href="portfolio-physical.html">Art</a>
@@ -69,12 +69,11 @@
         </div>
 
         <div id="chatting">
-            <p><pre class="enter">Hi, my name is Emma Petit and I am currently a </pre>
-                <pre class="enter">student in UC Berkeley's class of 2024. Currently </pre>
-                <pre class="enter">my major is Sustainable Environmental design and I </pre>
-                <pre class="enter">am also pursuing a certificate in design innovation.</pre>
-                <pre class="enter">I'm very passionate about UX/UI design, 3D modeling,</pre> 
-                <pre class="enter"> and graphic design.</pre>
+            <p><pre class="enter">Hi, my name is Emma Petit and I am a student in </pre>
+                <pre class="enter">UC Berkeley's class of 2024. Currently, my major is </pre>
+                <pre class="enter">Sustainable Environmental design and I am also pursuing</pre>
+                <pre class="enter">a certificate in Design Innovation. I'm very passionate</pre>
+                <pre class="enter">about UX/UI design, 3D modeling, and graphic design.</pre> 
                 <pre class="enter" id="space">&nbsp;</pre>
                 <pre class="enter">(fun fact: I coded this entire website) </pre></p>
         </div>
