--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -35,7 +35,7 @@
                     <a class="peach" href="portfolio.html">Graphic Design</a>
                 </div>
                 <div id="orange">
-                    <a class="peach" href="portfolio-3D.html">3D Modeling</a>
+                    <a class="peach">3D Modeling</a>
                 </div>
                 <div id="watermelon">
                     <a class="peach" href="portfolio-physical.html">Art</a>
@@ -83,13 +83,12 @@
             <div class="para">
                 <a class="title-link" href="file:///C:/Users/16614/OneDrive/school%20resources/Big%20boy%20code/Midterm/index.html">King Pin Website Redesign</a>
                 <div class="boxyy">
-                    <p><pre class="des">This project is focused on re-designing the kingpin website.</pre>
+                    <p><pre class="des">This project is focused on re-designing the Kingpin website.</pre>
                         <pre class="des">During this project I did a complete rebrand for the small</pre>
                         <pre class="des">buisness as well as created a high fidelity prototype of the</pre>
                         <pre class="des">website.</pre></p>
                 </div>
             </div>
-
         </div>
 
         <div class="projects">
@@ -105,18 +104,18 @@
                 </a>
             </div>
             
-            <div class="para">
+            <div class="para" id="gahh">
                 <a class="title-link" href="https://www.behance.net/gallery/118339965/Zoom-Connect-Making-Zoom-More-Interactive">Zoom UX/UI Project</a>
                 <div class="boxyy">
-                    <p><pre class="des">This project is focused on re-designing the kingpin website.</pre>
-                        <pre class="des">During this project I did a complete rebrand for the small</pre>
-                        <pre class="des">buisness as well as created a high fidelity prototype of the</pre>
-                        <pre class="des">website.</pre></p>
+                    <p><pre class="des">Zoom Connect is an extension I designed for the virtual </pre>
+                        <pre class="des">video confrencing application known as zoom in order to</pre>
+                        <pre class="des">make it more physically and mentally stimulating for </pre>
+                        <pre class="des">its users.</pre></p>        
                 </div>
             </div>
         </div>
 
-        <div class="projects">
+        <div class="projects" id="sheesh">
 
             <div>
                 <p class="nums">03</p>
@@ -130,10 +129,10 @@
             <div class="para">
                 <h1>Protect Our Planet</h1>
                 <div class="boxyy">
-                    <p><pre class="des">This project is focused on re-designing the kingpin website.</pre>
-                        <pre class="des">During this project I did a complete rebrand for the small</pre>
-                        <pre class="des">buisness as well as created a high fidelity prototype of the</pre>
-                        <pre class="des">website.</pre></p>
+                    <p><pre class="des">Protect Our Planet is a student led environmental activism </pre>
+                        <pre class="des">organization I co-founded. During my time as president</pre>
+                        <pre class="des">POP was able to create sustainable change in my city through</pre>
+                        <pre class="des">various initiatives me and my team came up with.</pre></p>
                 </div>
             </div>
         </div>
@@ -154,10 +153,10 @@
             <div class="para">
                 <a class="title-link" href="../Assets/img/Projects/nanoscience.pdf">Nanoscience Project</a>
                 <div class="boxyy">
-                    <p><pre class="des">This project is focused on re-designing the kingpin website.</pre>
-                        <pre class="des">During this project I did a complete rebrand for the small</pre>
-                        <pre class="des">buisness as well as created a high fidelity prototype of the</pre>
-                        <pre class="des">website.</pre></p>
+                    <p><pre class="des">This collaborative STEM based research project studied the</pre>
+                        <pre class="des">possibility of using Titanium Dioxide Nanoparticles as an</pre>
+                        <pre class="des">additive in plastic in order to reduce oxidation in them </pre>
+                        <pre class="des">and thus make the recycling process easier.</pre></p>
                 </div>
             </div>
         </div>
