--- a/Pages/portfolio-physical.html
+++ b/Pages/portfolio-physical.html
@@ -74,7 +74,7 @@
                 <img src="../Assets/img/Physical/art-4.jpg" class="graphic">
                 <img src="../Assets/img/Physical/art-3.jpg" class="graphic">
                 <img src="../Assets/img/Physical/art-5.jpg" class="graphic">
-                <img src="../Assets/img/Physical/art-6.jpg" class="graphic">
+                <img src="../Assets/img/Physical/art-6.JPG" class="graphic">
             </div>
 
         </div>
