--- a/Pages/portfolio.html
+++ b/Pages/portfolio.html
@@ -39,7 +39,7 @@
                     <a class="peach" href="portfolio.html">Graphic Design</a>
                 </div>
                 <div id="orange">
-                    <a class="peach" href="portfolio-3D.html">3D Modeling</a>
+                    <a class="peach">3D Modeling</a>
                 </div>
                 <div id="watermelon">
                     <a class="peach" href="portfolio-physical.html">Art</a>
@@ -86,10 +86,9 @@
 
         </div>
 
-        <!--Overlay-->
+        <!--Overlay -->
 
         <div id="overlay" class="nope"></div>
-
 
         <!--Light Boxes-->
 
@@ -97,7 +96,7 @@
 
             <div id="ducks">
                 
-                <div id="graphic-1" class="big-boy-box nope">
+                <div id="graphic-1" class="big-boy-box">
                     <img src="../Assets/img/graphic/graphic-1.jpg" class="grow nope">
                 
                 </div>
