--- a/index.html
+++ b/index.html
@@ -57,20 +57,19 @@
         <!--Drop Down Menu-->
 
         <div id="dropdown" class="drop-nav">
-            <a href="../Pages/portfolio.html" id="Portfolio" class=nav>Portfolio</a>
+            <a href="Pages/portfolio.html" id="Portfolio" class=nav>Portfolio</a>
             <div id="dropdown-content" class="clover">
                 <div id="rasberry">
                     <a class="peach" href="Pages/portfolio.html">Graphic Design</a>
                 </div>
                 <div id="orange">
-                    <a class="peach" href="Pages/portfolio-3D.html">3D Modeling</a>
+                    <a class="peach">3D Modeling</a>
                 </div>
                 <div id="watermelon">
                     <a class="peach" href="Pages/portfolio-physical.html">Art</a>
                 </div>
             </div>
         </div>
-
 
 
             <!--Insert Logo Here -->
