--- a/Pages/portfolio-physical.html
+++ b/Pages/portfolio-physical.html
@@ -38,7 +38,7 @@
                     <a class="peach" href="portfolio.html">Graphic Design</a>
                 </div>
                 <div id="orange">
-                    <a class="peach" href="portfolio-3D.html">3D Modeling</a>
+                    <a class="peach">3D Modeling</a>
                 </div>
                 <div id="watermelon">
                     <a class="peach" href="portfolio-physical.html">Art</a>
