--- a/Pages/portfolio.html
+++ b/Pages/portfolio.html
@@ -82,6 +82,7 @@
                 <img src="../Assets/img/graphic/graphic-9.jpg" id="smol-img9" class="graphic">
                 <img src="../Assets/img/graphic/graphic-10.png" id="smol-img10" class="graphic">
                 <img src="../Assets/img/graphic/graphic-11.png" id="smol-img11" class="graphic">
+                <img src="../Assets/img/graphic/graphic-12.svg" id="smol-img12" class="graphic">
             </div>
 
         </div>
