better, much better

--- a/Pages/portfolio-physical.html
+++ b/Pages/portfolio-physical.html
@@ -69,12 +69,45 @@
         <div id="graphic-div">
 
             <div id="ducks">
-                <img src="../Assets/img/Physical/art-1.jpg" class="graphic">
-                <img src="../Assets/img/Physical/art-2.jpg" class="graphic">
-                <img src="../Assets/img/Physical/art-4.jpg" class="graphic">
-                <img src="../Assets/img/Physical/art-3.jpg" class="graphic">
-                <img src="../Assets/img/Physical/art-5.jpg" class="graphic">
-                <img src="../Assets/img/Physical/art-6.JPG" class="graphic">
+                <img src="../Assets/img/Physical/art-1.jpg" id="art-1" class="graphic">
+                <img src="../Assets/img/Physical/art-2.jpg" id="art-2" class="graphic">
+                <img src="../Assets/img/Physical/art-3.jpg" id="art-3" class="graphic">
+                <img src="../Assets/img/Physical/art-4.jpg" id="art-4" class="graphic">
+                <img src="../Assets/img/Physical/art-5.jpg" id="art-5" class="graphic">
+                <img src="../Assets/img/Physical/art-6.JPG" id="art-6" class="graphic">
+            </div>
+
+        </div>
+
+        <!--Overlay-->
+
+        <div id="overlay" class="nope"></div>
+
+        <!--Light Boxes-->
+
+        <div>
+
+            <div id="ducks">
+                
+                <div class="big-boy-box">
+                    <img src="../Assets/img/Physical/art-1.jpg" id="graphic-1" class="grow nope">
+                </div>
+                <div class="big-boy-box">
+                    <img src="../Assets/img/Physical/art-2.jpg" id="graphic-2" class="grow nope">
+                </div>
+                <div class="big-boy-box">
+                    <img src="../Assets/img/Physical/art-3.jpg" id="graphic-3" class="grow nope">
+                </div>
+                <div class="big-boy-box">
+                    <img src="../Assets/img/Physical/art-4.jpg" id="graphic-4" class="grow nope">
+                </div>
+                <div class="big-boy-box">
+                    <img src="../Assets/img/Physical/art-5.jpg" id="graphic-5" class="grow nope">
+                </div>
+                <div class="big-boy-box">
+                    <img src="../Assets/img/Physical/art-6.JPG" id="graphic-6" class="grow nope">
+                </div>
+
             </div>
 
         </div>
@@ -83,4 +116,5 @@
 
     </Body>
     
+    <script src="../Assets/js/physical.js"></script>
     <script src="../Assets/js/navbar.js"></script>
