--- a/Pages/portfolio-physical.html
+++ b/Pages/portfolio-physical.html
@@ -89,23 +89,66 @@
 
             <div id="ducks">
                 
-                <div class="big-boy-box">
-                    <img src="../Assets/img/Physical/art-1.jpg" id="graphic-1" class="grow nope">
+                <div class="big-boy-box nope" id="graphic-1">
+                    <img src="../Assets/img/Physical/art-1.jpg"  class="grow">
+                    <a class="frog" href="../Assets/img/physical - large/Portrait.pdf">Portrait</a>
+                    <div>
+                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        </div>
                 </div>
-                <div class="big-boy-box">
-                    <img src="../Assets/img/Physical/art-2.jpg" id="graphic-2" class="grow nope">
                 </div>
-                <div class="big-boy-box">
-                    <img src="../Assets/img/Physical/art-3.jpg" id="graphic-3" class="grow nope">
+                <div class="big-boy-box nope" id="graphic-2">
+                    <img src="../Assets/img/Physical/art-2.jpg" class="grow">
+                    <a class="frog" href="../Assets/img/physical - large/album cover.pdf">Album Cover</a>
+                    <div>
+                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        </div>
                 </div>
-                <div class="big-boy-box">
-                    <img src="../Assets/img/Physical/art-4.jpg" id="graphic-4" class="grow nope">
+                <div class="big-boy-box nope" id="graphic-3">
+                    <img src="../Assets/img/Physical/art-3.jpg" class="grow">
+                    <a class="frog" href="../Assets/img/physical - large/Multi-Dimensional Disney.pdf">Disney Twisted</a>
+                    <div>
+                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        </div>
                 </div>
-                <div class="big-boy-box">
-                    <img src="../Assets/img/Physical/art-5.jpg" id="graphic-5" class="grow nope">
+                <div class="big-boy-box nope" id="graphic-4">
+                    <img src="../Assets/img/Physical/art-4.jpg" class="grow">
+                    <a class="frog" href="../Assets/img/physical - large/chinatown.pdf">China Town</a>
+                    <div>
+                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        </div>
                 </div>
-                <div class="big-boy-box">
-                    <img src="../Assets/img/Physical/art-6.JPG" id="graphic-6" class="grow nope">
+                <div class="big-boy-box nope" id="graphic-5">
+                    <img src="../Assets/img/Physical/art-5.jpg" class="grow">
+                    <a class="frog" href="../Assets/img/physical - large/washing machine.pdf">Backgrounds</a>
+                    <div>
+                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        </div>
+                </div>
+                <div class="big-boy-box nope" id="graphic-6">
+                    <img src="../Assets/img/Physical/art-6.JPG" class="grow">
+                    <a class="frog" href="../Assets/img/physical - large/sketchbook.pdf">Sketchbook</a>
+                    <div>
+                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        </div>
                 </div>
 
             </div>
