--- a/Pages/portfolio.html
+++ b/Pages/portfolio.html
@@ -96,42 +96,125 @@
 
             <div id="ducks">
                 
-                <div class="big-boy-box">
-                    <img src="../Assets/img/graphic/graphic-1.jpg" id="graphic-1" class="grow nope">
-                
+                <div class="big-boy-box nope" id="graphic-1">
+                    <img src="../Assets/img/graphic/graphic-1.jpg" class="grow">
+                    <a class="frog" href="../Assets/img/Projects - large/version 9 biophillia-01.pdf">Biophillia Poster Contest</a>
+                    <div>
+                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        </div>
                 </div>
-                <div class="big-boy-box">
-                    <img src="../Assets/img/graphic/graphic-2.jpg" id="graphic-2" class="grow nope">
+                <div class="big-boy-box nope" id="graphic-2">
+                    <img src="../Assets/img/graphic/graphic-2.jpg" class="grow">
+                    <a class="frog" href="../Assets/img/Projects - large/swiss cheese-01.pdf">Swiss Cheese</a>
+                    <div>
+                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        </div>
                 </div>
-                <div class="big-boy-box">
-                    <img src="../Assets/img/graphic/graphic-3.png" id="graphic-3" class="grow nope">
+                <div class="big-boy-box nope" id="graphic-3">
+                    <img src="../Assets/img/graphic/graphic-3.png" class="grow">
+                    <a class="frog" href="../Assets/img/Projects - large/idk.pdf">Character Design</a>
+                    <div>
+                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        </div>
                 </div>
-                <div class="big-boy-box">
-                    <img src="../Assets/img/graphic/graphic-4.png" id="graphic-4" class="grow nope">
+                <div class="big-boy-box nope" id="graphic-4">
+                    <img src="../Assets/img/graphic/graphic-4.png" class="grow">
+                    <a class="frog" href="../Assets/img/Projects - large/Gemini.pdf">Gemini</a>
+                    <div>
+                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    </div>
                 </div>
-                <div class="big-boy-box">
-                    <img src="../Assets/img/graphic/graphic-5.png" id="graphic-5" class="grow nope">
+                <div class="big-boy-box nope" id="graphic-5">
+                    <img src="../Assets/img/graphic/graphic-5.png"  class="grow">
+                    <a class="frog" href="../Assets/img/Projects - large/city poster-01.pdf">Prague Poster</a>
+                    <div>
+                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    </div>
                 </div>
-                <div class="big-boy-box">
-                    <img src="../Assets/img/graphic/graphic-6.png" id="graphic-6" class="grow nope">
+                <div class="big-boy-box nope" id="graphic-6">
+                    <img src="../Assets/img/graphic/graphic-6.png"  class="grow">
+                    <a class="frog" href="../Assets/img/Projects - large/Ratatouille.pdf">Ratatouille</a>
+                    <div>
+                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    </div>
                 </div>
-                <div class="big-boy-box">
-                    <img src="../Assets/img/graphic/graphic-7.png" id="graphic-7" class="grow nope">
+                <div class="big-boy-box nope" id="graphic-7">
+                    <img src="../Assets/img/graphic/graphic-7.png" class="grow">
+                    <a class="frog" href="../Assets/img/Projects - large/POP picture.pdf">POP Style</a>
+                    <div>
+                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    </div>
                 </div>
-                <div class="big-boy-box">
-                    <img src="../Assets/img/graphic/graphic-8.png" id="graphic-8" class="grow nope">
+                <div class="big-boy-box nope" id="graphic-8">
+                    <img src="../Assets/img/graphic/graphic-8.png" class="grow">
+                    <a class="frog" href="../Assets/img/Projects - large/food icons-01.pdf">Food Icons</a>
+                    <div>
+                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    </div>
                 </div>
-                <div class="big-boy-box">
-                    <img src="../Assets/img/graphic/graphic-9.jpg" id="graphic-9" class="grow nope">
+                <div class="big-boy-box nope" id="graphic-9">
+                    <img src="../Assets/img/graphic/graphic-9.jpg" class="grow">
+                    <a class="frog" href="../Assets/img/Projects - large/Suitcase Redesign.pdf">Suitcase Redesign</a>
+                    <div>
+                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    </div>
                 </div>
-                <div class="big-boy-box">
-                    <img src="../Assets/img/graphic/graphic-10.png" id="graphic-10" class="grow nope">
+                <div class="big-boy-box nope" id="graphic-10">
+                    <img src="../Assets/img/graphic/graphic-10.png" class="grow">
+                    <a class="frog" href="../Assets/img/Projects - large/fairies.pdf">Fairies</a>
+                    <div>
+                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    </div>
                 </div>
-                <div class="big-boy-box">
-                    <img src="../Assets/img/graphic/graphic-11.png" id="graphic-11" class="grow nope">
+                <div class="big-boy-box nope" id="graphic-11">
+                    <img src="../Assets/img/graphic/graphic-11.png" class="grow">
+                    <a class="frog" href="../Assets/img/Projects - large/Glitch.pdf">Glitch</a>
+                    <div>
+                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    </div>
                 </div>
-                <div class="big-boy-box">
-                    <img src="../Assets/img/graphic/graphic-12.png" id="graphic-12" class="grow nope">
+                <div class="big-boy-box nope" id="graphic-12">
+                    <img src="../Assets/img/graphic/graphic-12.png" class="grow">
+                    <a class="frog" href="../Assets/img/Projects - large/Willow.pdf">Album Cover</a>
+                    <div>
+                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    </div>
                 </div>
 
             </div>
