--- a/Pages/portfolio-physical.html
+++ b/Pages/portfolio-physical.html
@@ -37,9 +37,9 @@
                 <div id="rasberry">
                     <a class="peach" href="portfolio.html">Graphic Design</a>
                 </div>
-                <div id="orange">
+                <!--<div id="orange">
                     <a class="peach">3D Modeling</a>
-                </div>
+                </div>-->
                 <div id="watermelon">
                     <a class="peach" href="portfolio-physical.html">Art</a>
                 </div>
@@ -49,7 +49,7 @@
 
         <!--Insert Logo Here -->
         <a href="../index.html">
-            <img src="../Assets/img/icon.svg" id="logo">
+            <img src="../Assets/img/icon - Copy.svg" id="logo">
         </a>
 
 
@@ -104,20 +104,23 @@
                     <img src="../Assets/img/Physical/art-2.jpg" class="grow">
                     <a class="frog" href="../Assets/img/physical - large/album cover.pdf">Album Cover</a>
                     <div>
-                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <p class="toad">Music has always been a huge inspiration in my life and I have always loved looking at the album covers 
+                            of artists because I think it tells a lot about an artist and their music. This painting is an album cover inspired 
+                            by me that has details in it that are very personal. By looking at the painting you get a feel for my style, interests,
+                             and personality. The name of the painting is pluto because, while I have the tendency to isolate myself, the people 
+                             around me continue to love and fight for me. Inside the album, the genre of music that would be found is R & B and 
+                             alternative Pop.</p>
                         </div>
                 </div>
                 <div class="big-boy-box nope" id="graphic-3">
                     <img src="../Assets/img/Physical/art-3.jpg" class="grow">
                     <a class="frog" href="../Assets/img/physical - large/Multi-Dimensional Disney.pdf">Disney Twisted</a>
                     <div>
-                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <p class="toad">This painting was part of a series I did to take popular Disney characters and depict what they would be 
+                            like in real life without their fairytale endings. My inspiration behind this piece was the growing single use plastic
+                            epidemic occurring worldwide, polluting natural landscapes. The structure of the painting was inspired by lenticular printing, which is used to create what some 
+                             people refer to as “holographic images”. The painting is made from two poster boards and floor quarter rounds connected
+                              with hot glue and a cardboard stabilizer.</p>
                         </div>
                 </div>
                 <div class="big-boy-box nope" id="graphic-4">
