--- a/Pages/portfolio.html
+++ b/Pages/portfolio.html
@@ -38,9 +38,9 @@
                     <div id="rasberry">
                         <a class="peach" href="portfolio.html">Graphic Design</a>
                     </div>
-                    <div id="orange">
+                    <!--<div id="orange">
                         <a class="peach">3D Modeling</a>
-                    </div>
+                    </div>-->
                     <div id="watermelon">
                         <a class="peach" href="portfolio-physical.html">Art</a>
                     </div>
@@ -51,7 +51,7 @@
 
             <!--Insert Logo Here -->
             <a href="../index.html">
-                <img src="../Assets/img/icon.svg" id="logo">
+                <img src="../Assets/img/icon - Copy.svg" id="logo">
             </a>
 
 
@@ -180,10 +180,12 @@
                     <img src="../Assets/img/graphic/graphic-9.jpg" class="grow">
                     <a class="frog" href="../Assets/img/Projects - large/Suitcase Redesign.pdf">Suitcase Redesign</a>
                     <div>
-                        <p class="toad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-                        velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <p class="toad">One of the most annoying things for me when I go on vacation is when my suitcases' wheels get stuck
+                             and it's hard to maneuver my luggage. This project started as a way for me to re-design the wheels on suitcases
+                              and then evolved into an entire project focused on making a new suitcase that addresses the complaints most 
+                              consumers, including myself, have. First I focused components of the suitcase itself, designing the wheels so
+                               they have 360 degree motion and clip in airtight bags that maximize the space in the suitcase. After, I 
+                               decided to create the concept of an app that would additionally limit the stress of travelers.</p>
                     </div>
                 </div>
                 <div class="big-boy-box nope" id="graphic-10">
