--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -34,9 +34,9 @@
                 <div id="rasberry">
                     <a class="peach" href="portfolio.html">Graphic Design</a>
                 </div>
-                <div id="orange">
+                <!--<div id="orange">
                     <a class="peach">3D Modeling</a>
-                </div>
+                </div>-->
                 <div id="watermelon">
                     <a class="peach" href="portfolio-physical.html">Art</a>
                 </div>
@@ -47,7 +47,7 @@
 
         <!--Insert Logo Here -->
         <a href="../index.html">
-            <img src="../Assets/img/icon.svg" id="logo">
+            <img src="../Assets/img/icon - Copy.svg" id="logo">
         </a>
 
 
